# CCNView

./: .gitignore  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: health.rs  lib.rs  main.rs  routes.rs
api/src/configs/: config.rs  database.rs  mod.rs
api/src/models/: mod.rs
api/src/models/auth/: mod.rs
api/src/models/services/articles/: mod.rs
api/src/models/users/: mod.rs  user.rs
api/src/models/utilities/: mod.rs  response.rs
api/src/repositories/: mod.rs  user.rs
api/src/services/: hello_world.rs  mod.rs
api/src/services/auth/: mod.rs  signup.rs
api/src/tests/: mod.rs  validation_email.rs  validation_password.rs  validation_username.rs
api/src/utilities/: logger.rs  mod.rs  response.rs
api/src/utilities/hashing/: mod.rs  num.rs  password.rs
api/src/utilities/validation/: email.rs  mod.rs  password.rs  signup.rs  username.rs
api/tests/: hello_world.rs
web/: Dockerfile  package-lock.json  package.json  postcss.config.ts  tailwind.config.js  vite.config.ts
web/app/: root.tsx  routes.ts
web/app/config/: Company.tsx  Config.tsx  MetaData.tsx  SiteData.tsx
web/app/hooks/: Authenticated.tsx
web/app/pages/: Error.tsx  Home.tsx
web/app/pages/auth/: Login.tsx
web/app/pages/bookings/: HourlyBooking.tsx
web/app/providers/: Limovia.tsx
web/app/routes/: Error.tsx  Home.tsx
web/app/routes/legal/: PrivacyPolicy.tsx
web/app/styles/: Global.css
web/app/ui/: Background.tsx
web/app/ui/animations/: Loading.tsx  Progress.tsx  Pulse.tsx  Skeleton.tsx  Spinner.tsx
web/app/utilities/: Overlay.tsx  Token.tsx
(+8 files in other folders)
