[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
rand = { version = "0.9.1", features = ["std"] }
base64 = "0.22.1"
thiserror = "2.0.12"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
totp-rs = "5.7.0"
mongodb = "3.2.3"
fern = "0.7.1"
colored = "3.0.0"
chrono = "0.4.41"
dotenvy = "0.15.7"